# swarm-ui

./: .gitignore  Cargo.toml  DESIGN.md  README.md  SETUP.md  build.sh
crates/api/: Cargo.toml
crates/api/src/: callback.rs  handlers.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: dag.rs  lib.rs  scheduler.rs  state.rs
crates/dataref/: Cargo.toml
crates/dataref/src/: lib.rs  pointer.rs  token.rs
crates/events/: Cargo.toml
crates/events/src/: kafka.rs  lib.rs  types.rs  wal.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  messages.rs
docs/: README.md
docs/api/: README.md
docs/architecture/: overview.md
docs/guides/: getting-started.md
docs/specs/: .gitkeep
examples/: deepseek-coder.json  multi-llm-chain.json  pdf-summarize.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/components/ContextMenu/: index.tsx
frontend/src/components/EnvVariablesModal/: index.tsx
frontend/src/components/ExecutionPanel/: index.tsx
frontend/src/components/FlowEditor/: index.tsx
frontend/src/components/NodeConfigModal/: index.tsx
frontend/src/components/NodePalette/: index.tsx
frontend/src/components/edges/: EditableEdge.tsx  index.ts
frontend/src/components/nodes/: BaseNode.tsx  index.tsx
frontend/src/hooks/: index.ts  useApi.ts  useAutoSave.ts  useKeyboardShortcuts.ts  useWorkflow.ts
frontend/src/stores/: executionStore.ts  flowStore.ts  index.ts
frontend/src/utils/: cron.ts  index.ts  workflowFile.ts
