[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/dataref",
    "crates/events",
    "crates/protocol",
    "crates/api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Chivier"]
repository = "https://github.com/chivier/swarmx-ui"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph processing
petgraph = "0.7"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kafka (optional feature in events crate)
rdkafka = "0.36"

# Internal crates
swarmx-core = { path = "crates/core" }
swarmx-dataref = { path = "crates/dataref" }
swarmx-events = { path = "crates/events" }
swarmx-protocol = { path = "crates/protocol" }
