[package]
name = "swarmx-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SwarmX Protocol - HTTP message types and serialization"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true

swarmx-dataref = { path = "../dataref" }
